# glgame

./: .clang-format  .gitmodules  CMakeLists.txt  test.cpp
src/: common.cpp  common.hpp  main.cpp
src/engine/: arch.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  shapes.cpp  shapes.hpp  texture.cpp  texture.hpp
